<resources>
    <string name="app_name">Samer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">设置</string>
    <string name="menu_add">添加</string>
    <string name="menu_option">选项</string>

    <string name="title_activity_new_friend">NewFriendActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>

    <string name="main_tab_main">首页</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_accout">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>

    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>

    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>

    <string name="send_state">已读</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>

    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>

    <string name="username">用户名</string>
    <string name="search">搜索</string>

    <string name="new_friends">新朋友</string>

    <string name="near_people">附近的人</string>

    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>

    <string name="voice_seconds_tips">还可以说%1$s秒</string>

    <string name="voice_short_tips">录音时间太短</string>

    <string name="show_notice">\t\t\t\t\t自V1.0.6版本开始，应用源码中将不再公开ApplicationId,开发者请自行到官网申请。\n\t\t\t\t\t申请成功之后在应用程序启动页(SplashActivity)进行初始化操作!</string>

    <string name="index_info">校园资讯</string>
    <string name="index_job">兼职</string>
    <string name="index_secondHand">二手交易</string>
    <string name="index_library">图书馆</string>
    <string name="index_club">社团</string>
    <string name="index_interest">兴趣</string>
    <string name="index_selfie">爆照</string>
    <string name="index_negative">负能量</string>


    <string name="score">查成绩</string>
    <string name="lesson">课程表</string>
</resources>
