<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >


    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#606060"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
        <com.xsx.samer.widget.CircleImageView
                android:id="@+id/iv_avator"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:layout_marginTop="120dp"
                 />
        
        <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                 />
        
    </LinearLayout>
    

    <RelativeLayout
        android:id="@+id/layout_accout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_accout" />

        <TextView
            android:id="@+id/tv_accout"
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_gender" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_set_gender"
                style="@style/Smile.TextView._Black"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp" />
            
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_friend"
        style="@style/Smile.Button.theme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_friend"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_chat"
        style="@style/Smile.Button.theme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/chat" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Smile.Button.logout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/blacklist" />

    <RelativeLayout
        android:id="@+id/layout_black_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_centerInParent="true"
            android:text="@string/black_tips"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>