<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/login_icon_account"
            android:drawablePadding="25dip"
            android:hint="@string/login_username_hint"
            android:paddingLeft="15dip"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColorHint="#ffdddddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/base_horization_line" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="#ff58aaff"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>
