<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />


    <RelativeLayout
        android:id="@+id/rl_switch_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_notify" />

        <ImageView
            android:id="@+id/iv_open_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_switch_voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_voice" />

        <ImageView
            android:id="@+id/iv_open_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_switch_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_vibrate" />

        <ImageView
            android:id="@+id/iv_open_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/off"
            android:visibility="invisible" />
    </RelativeLayout>


</LinearLayout>