<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff" >



    <RelativeLayout
        android:id="@+id/layout_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >



        <RelativeLayout
            android:id="@+id/headView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/layout_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <FrameLayout
                    android:id="@+id/frame_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/iv_msg_tips"
                        android:visibility="invisible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:contentDescription="@string/action_settings"
                        android:src="@drawable/msg_tips" />

                    <ImageView
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="6.0dip"
                        android:contentDescription="@string/action_settings"
                        android:padding="5dp"
                        android:src="@drawable/friend" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_new_name"
                    style="@style/Smile.TextView._Black"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/new_friends"
                    android:textSize="20sp" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/layout_near"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_new"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="50.0dip"
                    android:layout_height="50.0dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="6.0dip"
                    android:contentDescription="@string/action_settings"
                    android:padding="5dp"
                    android:src="@drawable/location" />

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/near_people"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
		<View
		    android:id="@+id/line2"
		    android:layout_below="@id/headView"
        	android:layout_width="match_parent"
        	android:layout_height="@dimen/base_line_width_15"
        	android:background="#e1e1e1" >
    	</View>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/line2"
            android:layout_gravity="top"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/list_friends"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="#00000000"
                android:scrollbars="none" />


        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>